--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.1.0",
     "eslint-config-prettier": "^8.5.0",
     "immer": "^9.0.12",
@@ -19,6 +20,7 @@
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.0.3",
     "styled-components": "^5.3.5",
     "swiper": "^6.8.4",
     "web-vitals": "^1.1.2"
@@ -39,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "proxy": "http://localhost:4000/"
 }
