--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.0.3",
     "styled-components": "^5.3.5",
-    "swiper": "^6.8.4",
+    "swiper": "6.8.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
