--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,4 @@ yarn-debug.log*
 yarn-error.log*
 
 .env.*
-ldighekk23vhw010.pem
-
-# practice redux-thunk & redux-saga file
-MoviePage2.js
-Arrowswiper2.js
-movie.js
-movies.js
+UserForm.js
